2011-12-18  Jan Djärv  <jan.h.d@swipnet.se>

	* nsselect.m (CUT_BUFFER_SUPPORT): Remove define.
	(symbol_to_nsstring): Fix indentation.
	(ns_symbol_to_pb): New function.
	(Fns_get_selection_internal): Renamed from Fns_get_cut_buffer_internal.
	(Fns_rotate_cut_buffers_internal): Removed.
	(Fns_store_selection_internal): Renamed from
	Fns_store_cut_buffer_internal.
	(ns_get_foreign_selection, Fx_own_selection_internal)
	(Fx_disown_selection_internal, Fx_selection_exists_p)
	(Fns_get_selection_internal, Fns_store_selection_internal): Use
	ns_symbol_to_pb and check if return value is nil.
	(syms_of_nsselect): Remove ifdef CUT_BUFFER_SUPPORT.  Remove
	defsubr Sns_rotate_cut_buffers_internal.  Sns_get_cut_buffer_internal
	renamed to Sns_get_selection_internal, Sns_store_cut_buffer_internal
	renamed to Sns_store_selection_internal.
	(ns_handle_selection_request): Move code to Fx_own_selection_internal
	and remove this function.
	(ns_handle_selection_clear): Remove, never used.
	(Fx_own_selection_internal): Move code from ns_handle_selection_request
	here.

2011-12-17  Ken Brown  <kbrown@cornell.edu>

	* fileio.c (check_writable) [CYGWIN]: Return non-zero if UID or
	GID is unknown (Bug#10257).

2011-12-17  Paul Eggert  <eggert@cs.ucla.edu>

	* s/gnu-linux.h: Fix mark_memory typo (Bug#10286).
	(GC_MARK_SECONDARY_STACK): Omit removed 3rd arg to mark_memory,
	which caused a build failure on GNU/Linux IA-64.  This problem was
	introduced by my 2011-10-07 patch.

2011-12-15  Juri Linkov  <juri@jurta.org>

	* image.c (imagemagick_error): New function.  (Bug#10112)
	(imagemagick_load_image): Comment out `MagickSetResolution' call.
	Use `imagemagick_error' where ImageMagick functions return
	`MagickFalse'.
	(Fimagemagick_types): Add `Fnreverse' to return the list in the
	proper order.

2011-12-15  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xftfont.c (xftfont_draw): Use the font metrics of s->font to
	fill background (Bug#8992).
